--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="grid"></div>
+    <div class="container">
+      <div class="grid"></div>
+      <div>Flags left: <span id="flagsLeft"></span></div>
+      <div id="result"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
